--- a/index.html
+++ b/index.html
@@ -503,161 +503,173 @@
                 </div>
             </div>
         </div>
-            <!-- Start speakers -->
-    <div class="speakers">
-        <div class="container">
-            <div class="special-heading">
-                <h2>Speakers</h2>
-            </div>
-            <div class="content">
-                <div class="card">
-                    <div class="time">
-                        <p>9:30 To 10:30 AM</p>
-                    </div>
-                    <div class="social">
-                        <a href class="ico">
-                            <i class="fa-brands fa-facebook-f"></i>
-                        </a>
-                        <a href class="ico">
-                            <i class="fa-brands fa-twitter"></i>
-                        </a>
-                        <a href class="ico">
-                            <i class="fa-brands fa-linkedin-in"></i>
-                        </a>
-                    </div>
-                    <div class="image">
-                        <div class="layer"></div>
-                        <img src="imgs/428699812_817232470430822_3672796228702654987_n.png" alt="">
-                    </div>
-                    <div class="text" >
-                        <h2>Osama Elzero</h2>
-                        <p>Expert at Web Development</p>
-                    </div>
+        <!-- Start speakers -->
+        <div class="speakers">
+            <div class="container">
+                <div class="special-heading">
+                    <h2>Speakers</h2>
                 </div>
-                <div class="card">
-                    <div class="time">
-                        <p>11:00 To 11:30 AM</p>
+                <div class="content">
+                    <div class="card">
+                        <div class="time">
+                            <p>9:30 To 10:30 AM</p>
+                        </div>
+                        <div class="social">
+                            <a href class="ico">
+                                <i class="fa-brands fa-facebook-f"></i>
+                            </a>
+                            <a href class="ico">
+                                <i class="fa-brands fa-twitter"></i>
+                            </a>
+                            <a href class="ico">
+                                <i class="fa-brands fa-linkedin-in"></i>
+                            </a>
+                        </div>
+                        <div class="image">
+                            <div class="layer"></div>
+                            <img
+                                src="imgs/428699812_817232470430822_3672796228702654987_n.png"
+                                alt>
+                        </div>
+                        <div class="text">
+                            <h2>Osama Elzero</h2>
+                            <p>Expert at Web Development</p>
+                        </div>
                     </div>
-                    <div class="social">
-                        <a href class="ico">
-                            <i class="fa-brands fa-facebook-f"></i>
-                        </a>
-                        <a href class="ico">
-                            <i class="fa-brands fa-twitter"></i>
-                        </a>
-                        <a href class="ico">
-                            <i class="fa-brands fa-linkedin-in"></i>
-                        </a>
+                    <div class="card">
+                        <div class="time">
+                            <p>11:00 To 11:30 AM</p>
+                        </div>
+                        <div class="social">
+                            <a href class="ico">
+                                <i class="fa-brands fa-facebook-f"></i>
+                            </a>
+                            <a href class="ico">
+                                <i class="fa-brands fa-twitter"></i>
+                            </a>
+                            <a href class="ico">
+                                <i class="fa-brands fa-linkedin-in"></i>
+                            </a>
+                        </div>
+                        <div class="image">
+                            <div class="layer"></div>
+                            <img
+                                src="imgs/430858252_819899103497492_753438531780433772_n.png"
+                                alt>
+                        </div>
+                        <div class="text">
+                            <h2>Mohamed Tharwat</h3>
+                            <p>Expert at AI And ML</p>
+                        </div>
                     </div>
-                    <div class="image">
-                        <div class="layer"></div>
-                        <img src="imgs/430858252_819899103497492_753438531780433772_n.png" alt="">
+                    <div class="card">
+                        <div class="time">
+                            <p>12:00 To 12:30 PM</p>
+                        </div>
+                        <div class="social">
+                            <a href class="ico">
+                                <i class="fa-brands fa-facebook-f"></i>
+                            </a>
+                            <a href class="ico">
+                                <i class="fa-brands fa-twitter"></i>
+                            </a>
+                            <a href class="ico">
+                                <i class="fa-brands fa-linkedin-in"></i>
+                            </a>
+                        </div>
+                        <div class="image">
+                            <div class="layer"></div>
+                            <img
+                                src="imgs/430866151_819899663497436_3855873767756725001_n.png"
+                                alt>
+                        </div>
+                        <div class="text">
+                            <h2>Ahmed Abd ElHafez</h2>
+                            <p>Expert at Cyper Security</p>
+                        </div>
                     </div>
-                    <div class="text">
-                    <h2>Mohamed Tharwat</h3>
-                    <p>Expert at AI And ML</p>
+                    <div class="card">
+                        <div class="time">
+                            <p>12:30 To 1:00 AM</p>
+                        </div>
+                        <div class="social">
+                            <a href class="ico">
+                                <i class="fa-brands fa-facebook-f"></i>
+                            </a>
+                            <a href class="ico">
+                                <i class="fa-brands fa-twitter"></i>
+                            </a>
+                            <a href class="ico">
+                                <i class="fa-brands fa-linkedin-in"></i>
+                            </a>
+                        </div>
+                        <div class="image">
+                            <div class="layer"></div>
+                            <img
+                                src="imgs/430870673_819898770164192_6054743429955625108_n.png"
+                                alt>
+                        </div>
+                        <div class="text">
+                            <h2>Amr Al Awamry</h2>
+                            <p>Expert at Enterepreneurship</p>
+                        </div>
                     </div>
-                </div>
-                <div class="card">
-                    <div class="time">
-                        <p>12:00 To 12:30 PM</p>
+                    <div class="card">
+                        <div class="time">
+                            <p>1:00 To 1:30 PM</p>
+                        </div>
+                        <div class="social">
+                            <a href class="ico">
+                                <i class="fa-brands fa-facebook-f"></i>
+                            </a>
+                            <a href class="ico">
+                                <i class="fa-brands fa-twitter"></i>
+                            </a>
+                            <a href class="ico">
+                                <i class="fa-brands fa-linkedin-in"></i>
+                            </a>
+                        </div>
+                        <div class="image">
+                            <div class="layer"></div>
+                            <img
+                                src="imgs/430905592_819898523497550_2249855588110603515_n.png"
+                                alt>
+                        </div>
+                        <div class="text">
+                            <h2>Mahmoud Hamdy</h2>
+                            <p>Expert at Cv Writing</p>
+                        </div>
                     </div>
-                    <div class="social">
-                        <a href class="ico">
-                            <i class="fa-brands fa-facebook-f"></i>
-                        </a>
-                        <a href class="ico">
-                            <i class="fa-brands fa-twitter"></i>
-                        </a>
-                        <a href class="ico">
-                            <i class="fa-brands fa-linkedin-in"></i>
-                        </a>
-                    </div>
-                    <div class="image">
-                        <div class="layer"></div>
-                        <img src="imgs/430866151_819899663497436_3855873767756725001_n.png" alt="">
-                    </div>
-                    <div class="text">
-                        <h2>Ahmed Abd ElHafez</h2>
-                        <p>Expert at Cyper Security</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="time">
-                        <p>12:30 To 1:00 AM</p>
-                    </div>
-                    <div class="social">
-                        <a href class="ico">
-                            <i class="fa-brands fa-facebook-f"></i>
-                        </a>
-                        <a href class="ico">
-                            <i class="fa-brands fa-twitter"></i>
-                        </a>
-                        <a href class="ico">
-                            <i class="fa-brands fa-linkedin-in"></i>
-                        </a>
-                    </div>
-                    <div class="image">
-                        <div class="layer"></div>
-                        <img src="imgs/430870673_819898770164192_6054743429955625108_n.png" alt="">
-                    </div>
-                    <div class="text">
-                        <h2>Amr Al Awamry</h2>
-                        <p>Expert at Enterepreneurship</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="time">
-                        <p>1:00 To 1:30 PM</p>
-                    </div>
-                    <div class="social">
-                        <a href class="ico">
-                            <i class="fa-brands fa-facebook-f"></i>
-                        </a>
-                        <a href class="ico">
-                            <i class="fa-brands fa-twitter"></i>
-                        </a>
-                        <a href class="ico">
-                            <i class="fa-brands fa-linkedin-in"></i>
-                        </a>
-                    </div>
-                    <div class="image">
-                        <div class="layer"></div>
-                        <img src="imgs/430905592_819898523497550_2249855588110603515_n.png" alt="">
-                    </div>
-                    <div class="text">
-                        <h2>Mahmoud Hamdy</h2>
-                        <p>Expert at Cv Writing</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="time">
-                        <p>2:00 To 2:30 PM</p>
-                    </div>
-                    <div class="social">
-                        <a href class="ico">
-                            <i class="fa-brands fa-facebook-f"></i>
-                        </a>
-                        <a href class="ico">
-                            <i class="fa-brands fa-twitter"></i>
-                        </a>
-                        <a href class="ico">
-                            <i class="fa-brands fa-linkedin-in"></i>
-                        </a>
-                    </div>
-                    <div class="image">
-                        <div class="layer"></div>
-                        <img src="imgs/431312294_819899350164134_2190193390468296135_n.png" alt="">
-                    </div>
-                    <div class="text" data-aos-duration="1000" >
-                        <h2>Mohamed Adel</h2>
-                        <p>Expert at Data Center</p>
+                    <div class="card">
+                        <div class="time">
+                            <p>2:00 To 2:30 PM</p>
+                        </div>
+                        <div class="social">
+                            <a href class="ico">
+                                <i class="fa-brands fa-facebook-f"></i>
+                            </a>
+                            <a href class="ico">
+                                <i class="fa-brands fa-twitter"></i>
+                            </a>
+                            <a href class="ico">
+                                <i class="fa-brands fa-linkedin-in"></i>
+                            </a>
+                        </div>
+                        <div class="image">
+                            <div class="layer"></div>
+                            <img
+                                src="imgs/431312294_819899350164134_2190193390468296135_n.png"
+                                alt>
+                        </div>
+                        <div class="text" data-aos-duration="1000">
+                            <h2>Mohamed Adel</h2>
+                            <p>Expert at Data Center</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <!-- End speakers -->
+        <!-- End speakers -->
         <div class="events">
             <div class="container">
                 <div class="moataz_container">
@@ -880,13 +892,13 @@
                             <img src="imgs/buzzgallery.png" alt>
                         </div>
                         <div class="sp">
-                            <img src="imgs/Isis.png" alt>
+                            <img src="imgs/blanco.png" alt>
                         </div>
                         <div class="sp">
-                            <img src="imgs/IEEE-Day.png" alt>
+                            <img src="imgs/overpizza.jpg" alt>
                         </div>
-                        <div class="sp" id="blanco">
-                            <img src="imgs/blanco.png" alt>
+                        <div class="sp">
+                            <img src="imgs/dragonn.png" alt>
                         </div>
                         <div class="sp">
                             <img src="imgs/Fati's.png" alt>
