--- a/index.html
+++ b/index.html
@@ -156,7 +156,9 @@
                     <h4 class="h4">What We Do.</h4>
                     <img src="imgs/line.png" alt>
                     <div class="cards">
-                        <div class="wo">
+                        <div class="wo" data-aos="fade-right"
+                        data-aos-duration="1000"
+                        data-aos-once="true">
                             <div class="ico">
                                 <img src="imgs/calendar.png" alt>
                             </div>
@@ -167,7 +169,10 @@
                                     and mega event).</p>
                             </div>
                         </div>
-                        <div class="wo">
+                        <div class="wo"data-aos="fade-left"
+                        data-aos-duration="1000"
+                        data-aos-delay="400"
+                        data-aos-once="true">
                             <div class="ico">
                                 <img src="imgs/seminar (1).png" alt>
                             </div>
@@ -179,7 +184,10 @@
                                     benefit the students.</p>
                             </div>
                         </div>
-                        <div class="wo" id="third">
+                        <div class="wo" id="third" data-aos="fade-up"
+                        data-aos-duration="1000"
+                        data-aos-delay="200"
+                        data-aos-once="true">
                             <div class="ico">
                                 <img src="imgs/idea (1).png" alt>
                             </div>
@@ -661,7 +669,7 @@
                                 src="imgs/431312294_819899350164134_2190193390468296135_n.png"
                                 alt>
                         </div>
-                        <div class="text" data-aos-duration="1000">
+                        <div class="text" >
                             <h2>Mohamed Adel</h2>
                             <p>Expert at Data Center</p>
                         </div>
@@ -910,7 +918,9 @@
             <!--  Start Footer Section -->
             <div class="footer">
                 <div class="content">
-                    <div class="subscirbe">
+                    <div class="subscirbe" data-aos="fade-up"
+                    data-aos-duration="1000"
+                    data-aos-once="true">>
                         <div class="text">
                             <p>Subscribe to our newsletter</p>
                         </div>
