--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
                     <img src="imgs/line.png" alt>
                     <div class="cards">
                         <div class="wo" data-aos="fade-right"
-                        data-aos-duration="1000"
-                        data-aos-once="true">
+                            data-aos-duration="1000"
+                            data-aos-once="true">
                             <div class="ico">
                                 <img src="imgs/calendar.png" alt>
                             </div>
@@ -169,10 +169,10 @@
                                     and mega event).</p>
                             </div>
                         </div>
-                        <div class="wo"data-aos="fade-left"
-                        data-aos-duration="1000"
-                        data-aos-delay="400"
-                        data-aos-once="true">
+                        <div class="wo" data-aos="fade-left"
+                            data-aos-duration="1000"
+                            data-aos-delay="400"
+                            data-aos-once="true">
                             <div class="ico">
                                 <img src="imgs/seminar (1).png" alt>
                             </div>
@@ -185,9 +185,9 @@
                             </div>
                         </div>
                         <div class="wo" id="third" data-aos="fade-up"
-                        data-aos-duration="1000"
-                        data-aos-delay="200"
-                        data-aos-once="true">
+                            data-aos-duration="1000"
+                            data-aos-delay="200"
+                            data-aos-once="true">
                             <div class="ico">
                                 <img src="imgs/idea (1).png" alt>
                             </div>
@@ -669,11 +669,108 @@
                                 src="imgs/431312294_819899350164134_2190193390468296135_n.png"
                                 alt>
                         </div>
-                        <div class="text" >
+                        <div class="text">
                             <h2>Mohamed Adel</h2>
                             <p>Expert at Data Center</p>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+        <!-- End speakers -->
+        <!-- Start speakers -->
+        <div class="osevents">
+            <div class="container">
+                <div class="special-heading">
+                    <p>Discover Our Events</p>
+                    <h2>Featured Events</h2>
+                </div>
+                <div class="content">
+                    <div class="card">
+                        <!-- <div class="time">
+                            <p>9:30 To 10:30 AM</p>
+                        </div> -->
+                        <div class="layer"></div>
+                        <div class="text">
+                            <div class="title">
+                                <h2 style="color: #7D0A0A;">Let's Embark</h2>
+                                <h2 class="shadow">Let's Embark</h2>
+                                <p>winter 2022</p>
+                            </div>
+                            <p class="description">The main objective of the
+                                Portal Beyond Now event was to provide an
+                                opportunity for undergraduate students to
+                                interact and learn from experts in various
+                                fields. The event aimed to educate and empower
+                                the participants to acquire new knowledge,
+                                skills, and ideas that would help them in their
+                                future careers. The event also aimed to foster
+                                networking opportunities among the participants
+                                and speakers to enable them to establish
+                                valuable professional connections. ...</p>
+                                <div class="but">
+                                    <button class="bt1">Show Events Photos</button>
+                                </div>
+                        </div>
+                    </div>
+                    <div class="card"
+                        style="background-image: url(/imgs/code\ of\ duty\ iii.jpg);">
+                        <!-- <div class="time">
+                            <p>9:30 To 10:30 AM</p>
+                        </div> -->
+                        <div class="layer"></div>
+
+                        <div class="text">
+                            <div class="title">
+                                <h2 style="color: green;">Code Of Duty III</h2>
+                                <h2 class="shadow">Code Of Duty III</h2>
+                                <p>winter 2021</p>
+                            </div>
+                            <p class="description">Many of us think programming
+                                is difficult and they could not link it to the
+                                labor market. Programming is not just a language
+                                ... Programming is a way of thinking, So IEEE
+                                BUB held CODE OF DUTY III... A Problem Solving
+                                contest in its third edition. problem-solving is
+                                the process of identifying a problem, developing
+                                an algorithm for the identified problem, and
+                                finally implementing the algorithm to develop a
+                                computer program. Problem-solving is an
+                                important skill because most interviews...</p>
+                                <div class="but" >
+                                    <button class="bt1" style="background-color: green;">Show Events Photos</button>
+                                </div>
+                        </div>
+                    </div>
+                    <div class="card"
+                        style="background-image: url(imgs/undercontrol.jpg);">
+                        <!-- <div class="time">
+                            <p>9:30 To 10:30 AM</p>
+                        </div> -->
+                        <div class="layer"></div>
+                        <div class="text">
+                            <div class="title">
+                                <h2>Under Control</h2>
+                                <h2 class="shadow">Under Control</h2>
+                                <p>winter 2022</p>
+                            </div>
+                            <p class="description">When will we realize that
+                                now, we are living in the FUTURE? Of course,
+                                life will be easier. We will be able to control
+                                everything around us standing exactly where we
+                                are. This will lead us to our main topic: IOT OR
+                                "INTERNET OF THINGS" This is what enables you to
+                                make a connection between more than one device
+                                in your system, and everything will be under
+                                your control. Recently, we've seen cars that
+                                send notifications that they need gas, the smart
+                                systems that Google and Amazo...</p>
+                                <div class="but">
+                                    <button class="bt1" style="background-color: #007bff;">Show Events Photos</button>
+                                </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
@@ -919,8 +1016,8 @@
             <div class="footer">
                 <div class="content">
                     <div class="subscirbe" data-aos="fade-up"
-                    data-aos-duration="1000"
-                    data-aos-once="true">>
+                        data-aos-duration="1000"
+                        data-aos-once="true">>
                         <div class="text">
                             <p>Subscribe to our newsletter</p>
                         </div>
