--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
                         </div>
                     </div>
                     <div class="card"
-                        style="background-image: url(/imgs/code\ of\ duty\ iii.jpg);">
+                        style="background-image: url(imgs/code\ of\ duty\ iii.jpg);">
                         <!-- <div class="time">
                             <p>9:30 To 10:30 AM</p>
                         </div> -->
