--- a/index.html
+++ b/index.html
@@ -686,7 +686,7 @@
                     <h2>Featured Events</h2>
                 </div>
                 <div class="content">
-                    <div class="card">
+                    <div class="card card-smaller">
                         <!-- <div class="time">
                             <p>9:30 To 10:30 AM</p>
                         </div> -->
@@ -709,7 +709,7 @@
                                 and speakers to enable them to establish
                                 valuable professional connections. ...</p>
                                 <div class="but">
-                                    <button class="bt1">Show Events Photos</button>
+                                    <button class="bt1">Show Event Photos</button>
                                 </div>
                         </div>
                     </div>
@@ -738,11 +738,11 @@
                                 computer program. Problem-solving is an
                                 important skill because most interviews...</p>
                                 <div class="but" >
-                                    <button class="bt1" style="background-color: green;">Show Events Photos</button>
+                                    <button class="bt1" style="background-color: green;">Show Event Photos</button>
                                 </div>
                         </div>
                     </div>
-                    <div class="card"
+                    <div class="card card--bw"
                         style="background-image: url(imgs/undercontrol.jpg);">
                         <!-- <div class="time">
                             <p>9:30 To 10:30 AM</p>
@@ -752,7 +752,7 @@
                             <div class="title">
                                 <h2>Under Control</h2>
                                 <h2 class="shadow">Under Control</h2>
-                                <p>winter 2022</p>
+                                <p>Summer 2021</p>
                             </div>
                             <p class="description">When will we realize that
                                 now, we are living in the FUTURE? Of course,
@@ -766,7 +766,7 @@
                                 send notifications that they need gas, the smart
                                 systems that Google and Amazo...</p>
                                 <div class="but">
-                                    <button class="bt1" style="background-color: #007bff;">Show Events Photos</button>
+                                    <button class="bt1" style="background-color: #007bff;">Show Event Photos</button>
                                 </div>
                         </div>
                     </div>
