--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                                     <a href="#events">Events</a>
                                     <ul>
                                         <li><a href="#events">Spirit</a></li>
+                                        <li><a href="#embark">Let's Embark</a></li>
                                         <li><a href="#">Ghostech</a></li>
-                                        <li><a href="#">Mind Game</a></li>
                                     </ul>
                                 </li>
                                 <div class="but">
@@ -686,7 +686,7 @@
                     <h2>Featured Events</h2>
                 </div>
                 <div class="content">
-                    <div class="card card-smaller">
+                    <div class="card card-smaller" id="embark">
                         <!-- <div class="time">
                             <p>9:30 To 10:30 AM</p>
                         </div> -->
@@ -708,9 +708,9 @@
                                 networking opportunities among the participants
                                 and speakers to enable them to establish
                                 valuable professional connections. ...</p>
-                                <div class="but">
-                                    <button class="bt1">Show Event Photos</button>
-                                </div>
+                            <div class="but">
+                                <button class="bt1">Show Event Photos</button>
+                            </div>
                         </div>
                     </div>
                     <div class="card"
@@ -737,9 +737,11 @@
                                 finally implementing the algorithm to develop a
                                 computer program. Problem-solving is an
                                 important skill because most interviews...</p>
-                                <div class="but" >
-                                    <button class="bt1" style="background-color: green;">Show Event Photos</button>
-                                </div>
+                            <div class="but">
+                                <button class="bt1"
+                                    style="background-color: green;">Show Event
+                                    Photos</button>
+                            </div>
                         </div>
                     </div>
                     <div class="card card--bw"
@@ -765,9 +767,11 @@
                                 your control. Recently, we've seen cars that
                                 send notifications that they need gas, the smart
                                 systems that Google and Amazo...</p>
-                                <div class="but">
-                                    <button class="bt1" style="background-color: #007bff;">Show Event Photos</button>
-                                </div>
+                            <div class="but">
+                                <button class="bt1"
+                                    style="background-color: #007bff;">Show
+                                    Event Photos</button>
+                            </div>
                         </div>
                     </div>
 
@@ -778,10 +782,6 @@
         <div class="events">
             <div class="container">
                 <div class="moataz_container">
-                    <div class="special-heading">
-                        <p>Discover Our Events</p>
-                        <h2>Featured Events</h2>
-                    </div>
                     <div class="two">
                         <div class="row">
                             <div class="event">
@@ -799,37 +799,10 @@
                                     <div class="link_loc">
                                         <h3><a href="events">Portal Beyond
                                                 Now</a></h3>
-                                        <div>
-                                            <i
-                                                class="fa-solid fa-location-dot"></i>
-                                            <p>Sand diego, Canada</p>
-                                        </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="event">
-                                <div class="event2_img">
-                                    <a href="evenets"><img src="imgs/lets.jpg"
-                                            alt></a>
-                                    <div class="circle">
-                                        <span>
-                                            <span>14</span>
-                                            Dec
-                                        </span>
-                                    </div>
-                                </div>
-                                <div class="mocontent">
-                                    <div class="link_loc">
-                                        <h3><a href="events">Let's
-                                                Embark</a></h3>
-                                        <div>
-                                            <i
-                                                class="fa-solid fa-location-dot"></i>
-                                            <p>Sand diego, Canada</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+
                             <div class="event">
                                 <div class="event3_img">
                                     <a href="evenets"><img src="imgs/event3.jpg"
@@ -844,34 +817,7 @@
                                 <div class="mocontent">
                                     <div class="link_loc">
                                         <h3><a href="events">Mind Game</a></h3>
-                                        <div>
-                                            <i
-                                                class="fa-solid fa-location-dot"></i>
-                                            <p>Sand diego, Canada</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="event">
-                                <div class="event4_img">
-                                    <a href="evenets"><img src="imgs/career.jpg"
-                                            alt></a>
-                                    <div class="circle">
-                                        <span>
-                                            <span>6</span>
-                                            Apr
-                                        </span>
-                                    </div>
-                                </div>
-                                <div class="mocontent">
-                                    <div class="link_loc">
-                                        <h3><a href="events">Reach Your
-                                                Career</a></h3>
-                                        <div>
-                                            <i
-                                                class="fa-solid fa-location-dot"></i>
-                                            <p>Sand diego, Canada</p>
-                                        </div>
+
                                     </div>
                                 </div>
                             </div>
@@ -890,61 +836,11 @@
                                     <div class="link_loc">
                                         <h3><a href="events">Portal
                                                 "Out Of Time"</a></h3>
-                                        <div>
-                                            <i
-                                                class="fa-solid fa-location-dot"></i>
-                                            <p>Sand diego, Canada</p>
-                                        </div>
+
                                     </div>
                                 </div>
                             </div>
-                            <div class="event">
-                                <div class="event6_img">
-                                    <a href="evenets"><img
-                                            src="imgs/code of duty iii.jpg"
-                                            alt></a>
-                                    <div class="circle">
-                                        <span>
-                                            <span>11</span>
-                                            Apr
-                                        </span>
-                                    </div>
-                                </div>
-                                <div class="mocontent">
-                                    <div class="link_loc">
-                                        <h3><a href="events">CODE OF DUTY
-                                                III</a></h3>
-                                        <div>
-                                            <i
-                                                class="fa-solid fa-location-dot"></i>
-                                            <p>Sand diego, Canada</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="event">
-                                <div class="event7_img">
-                                    <a href="evenets"><img src="imgs/thanos.jpg"
-                                            alt></a>
-                                    <div class="circle">
-                                        <span>
-                                            <span>4</span>
-                                            Oct
-                                        </span>
-                                    </div>
-                                </div>
-                                <div class="mocontent">
-                                    <div class="link_loc">
-                                        <h3><a href="events">Embedded Infinity
-                                                War</a></h3>
-                                        <div>
-                                            <i
-                                                class="fa-solid fa-location-dot"></i>
-                                            <p>Sand diego, Canada</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+
                             <div class="event">
                                 <div class="event8_img">
                                     <a href="evenets"><img
@@ -960,11 +856,6 @@
                                     <div class="link_loc">
                                         <h3><a href="events">Step Up
                                                 Robothon</a></h3>
-                                        <div>
-                                            <i
-                                                class="fa-solid fa-location-dot"></i>
-                                            <p>Sand diego, Canada</p>
-                                        </div>
                                     </div>
                                 </div>
                             </div>
